// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduler Editor data transformation input frequency should match snapshot 1`] = `
Object {
  "at": "00:00",
  "days": Object {
    "friday": false,
    "monday": true,
    "saturday": true,
    "sunday": false,
    "thursday": false,
    "tuesday": false,
    "wednesday": true,
  },
  "months": Object {
    "april": true,
    "august": false,
    "december": true,
    "february": false,
    "january": false,
    "july": false,
    "june": false,
    "march": true,
    "may": false,
    "november": false,
    "october": false,
    "september": false,
  },
  "recur": "thirdWeekOfMonth",
  "timezone": "Europe/Berlin",
}
`;

exports[`Scheduler Editor data transformation input limits should match snapshot 1`] = `
Object {
  "endsAt": "2018-04-07 00:00:00",
  "maxExecutions": 10,
  "startsAt": "2018-03-07 00:00:00",
}
`;

exports[`Scheduler Editor data transformation input should match snapshot 1`] = `
Object {
  "frequency": Object {
    "at": "00:00",
    "days": Object {
      "friday": false,
      "monday": true,
      "saturday": true,
      "sunday": false,
      "thursday": false,
      "tuesday": false,
      "wednesday": true,
    },
    "months": Object {
      "april": true,
      "august": false,
      "december": true,
      "february": false,
      "january": false,
      "july": false,
      "june": false,
      "march": true,
      "may": false,
      "november": false,
      "october": false,
      "september": false,
    },
    "recur": "thirdWeekOfMonth",
    "timezone": "Europe/Berlin",
  },
  "limit": Object {
    "endsAt": "2018-04-07 00:00:00",
    "maxExecutions": 10,
    "startsAt": "2018-03-07 00:00:00",
  },
}
`;

exports[`Scheduler Editor data transformation output frequency should match snapshot 1`] = `
Object {
  "at": Array [
    "23:55",
  ],
  "days": Array [
    "tuesday",
    "thursday",
  ],
  "months": Array [
    "january",
    "september",
  ],
  "recur": "secondWeekOfMonth",
  "timezone": "Europe/Rome",
}
`;

exports[`Scheduler Editor data transformation output limits should match snapshot 1`] = `
Object {
  "service=scheduler;table=timetables;field=ends_at;": "2018-04-06 00:00:00",
  "service=scheduler;table=timetables;field=max_executions;": 2,
  "service=scheduler;table=timetables;field=starts_at;": "2018-04-07 00:00:00",
}
`;

exports[`Scheduler Editor data transformation output should match snapshot 1`] = `
Object {
  "service=scheduler;table=timetables;field=ends_at;": "2018-04-03 00:00:00",
  "service=scheduler;table=timetables;field=frequency;": Object {
    "at": Array [
      "22:55",
    ],
    "days": Array [
      "tuesday",
      "thursday",
      "friday",
    ],
    "months": Array [
      "january",
      "september",
      "december",
    ],
    "recur": "thirdWeekOfMonth",
    "timezone": "Europe/Madrid",
  },
  "service=scheduler;table=timetables;field=max_executions;": 7,
  "service=scheduler;table=timetables;field=starts_at;": "2018-04-02 00:00:00",
}
`;

exports[`Scheduler Editor empty schedule should match the snapshot 1`] = `
<div
  class="ui segment basic"
>
  <div
    class="ui equal width internally celled grid"
  >
    <div
      class="column"
    >
      <div
        class="ui form"
      >
        <div
          class="grouped fields"
        >
          <div
            class="field ui mini buttons"
          >
            <button
              class="ui button mini"
            >
              Work Days
            </button>
            <button
              class="ui button mini"
            >
              Every Day
            </button>
            <button
              class="ui button mini"
            >
              Clear
            </button>
          </div>
        </div>
        <div
          class="grouped fields"
        >
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Sunday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Monday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Tuesday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Wednesday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Thursday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Friday
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                Saturday
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ui divider"
      />
      <div
        class="ui form"
      >
        <div
          class="grouped fields"
        >
          <div
            class="field"
          >
            <div
              class="ui selection dropdown"
              tabindex="0"
            >
              <input
                type="hidden"
                name=""
              />
              <div
                class="text"
              >
                Daily on above days
              </div>
              <i
                class="dropdown icon"
              />
              <div
                class="menu dropdown_menu"
                tabindex="-1"
              >
                <div
                  data-value="daily"
                  data-text="Daily on above days"
                  class="item active selected"
                >
                  Daily on above days
                </div>
                <div
                  data-value="everyFortnight"
                  data-text="Every alternating week"
                  class="item"
                >
                  Every alternating week
                </div>
                <div
                  data-value="firstWeekOfMonth"
                  data-text="The first week only"
                  class="item"
                >
                  The first week only
                </div>
                <div
                  data-value="secondWeekOfMonth"
                  data-text="The second week only"
                  class="item"
                >
                  The second week only
                </div>
                <div
                  data-value="thirdWeekOfMonth"
                  data-text="The third week only"
                  class="item"
                >
                  The third week only
                </div>
                <div
                  data-value="fourthWeekOfMonth"
                  data-text="The fourth week only"
                  class="item"
                >
                  The fourth week only
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="ui form"
      >
        <div
          class="grouped fields"
        >
          <div
            class="field ui mini buttons"
          >
            <button
              class="ui button mini"
            >
              Every
            </button>
            <button
              class="ui button mini"
            >
              Alternative
            </button>
            <button
              class="ui button mini"
            >
              Clear
            </button>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                January
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                February
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                March
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                April
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                May
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                June
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                July
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                August
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                September
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                October
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                November
              </label>
            </div>
          </div>
          <div
            class="field"
          >
            <div
              class="ui toggle checkbox"
            >
              <input
                type="checkbox"
                value="1"
              />
              <label>
                December
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="ui form"
      >
        <div
          class="grouped fields"
        >
          <div
            class="field"
          >
            <label>
              Starts at
            </label>
            <span>
              <div
                class="ui action input"
              >
                <input
                  type="text"
                  placeholder="Select start date.."
                  readonly="readonly"
                />
                <button
                  class="ui icon button"
                >
                  <i
                    class="calendar outline icon"
                  />
                </button>
              </div>
            </span>
          </div>
          <div
            class="field"
          >
            <label>
              Ends at
            </label>
            <span>
              <div
                class="ui action input"
              >
                <input
                  type="text"
                  placeholder="Select end date.."
                  readonly="readonly"
                />
                <button
                  class="ui icon button"
                >
                  <i
                    class="calendar outline icon"
                  />
                </button>
              </div>
            </span>
          </div>
          <button
            class="ui mini button"
          >
            Clear End Date
          </button>
        </div>
        <div
          class="field"
        >
          <label>
            Time this schedule runs at
          </label>
          <div
            class="ui selection dropdown"
            tabindex="0"
          >
            <input
              type="hidden"
              name=""
            />
            <div
              class="text"
            >
              00:00
            </div>
            <i
              class="dropdown icon"
            />
            <div
              class="menu dropdown_menu"
              tabindex="-1"
            >
              <div
                data-value="00:00"
                data-text="00:00"
                class="item active selected"
              >
                00:00
              </div>
              <div
                data-value="00:05"
                data-text="00:05"
                class="item"
              >
                00:05
              </div>
              <div
                data-value="00:10"
                data-text="00:10"
                class="item"
              >
                00:10
              </div>
              <div
                data-value="00:15"
                data-text="00:15"
                class="item"
              >
                00:15
              </div>
              <div
                data-value="00:20"
                data-text="00:20"
                class="item"
              >
                00:20
              </div>
              <div
                data-value="00:25"
                data-text="00:25"
                class="item"
              >
                00:25
              </div>
              <div
                data-value="00:30"
                data-text="00:30"
                class="item"
              >
                00:30
              </div>
              <div
                data-value="00:35"
                data-text="00:35"
                class="item"
              >
                00:35
              </div>
              <div
                data-value="00:40"
                data-text="00:40"
                class="item"
              >
                00:40
              </div>
              <div
                data-value="00:45"
                data-text="00:45"
                class="item"
              >
                00:45
              </div>
              <div
                data-value="00:50"
                data-text="00:50"
                class="item"
              >
                00:50
              </div>
              <div
                data-value="00:55"
                data-text="00:55"
                class="item"
              >
                00:55
              </div>
              <div
                data-value="01:00"
                data-text="01:00"
                class="item"
              >
                01:00
              </div>
              <div
                data-value="01:05"
                data-text="01:05"
                class="item"
              >
                01:05
              </div>
              <div
                data-value="01:10"
                data-text="01:10"
                class="item"
              >
                01:10
              </div>
              <div
                data-value="01:15"
                data-text="01:15"
                class="item"
              >
                01:15
              </div>
              <div
                data-value="01:20"
                data-text="01:20"
                class="item"
              >
                01:20
              </div>
              <div
                data-value="01:25"
                data-text="01:25"
                class="item"
              >
                01:25
              </div>
              <div
                data-value="01:30"
                data-text="01:30"
                class="item"
              >
                01:30
              </div>
              <div
                data-value="01:35"
                data-text="01:35"
                class="item"
              >
                01:35
              </div>
              <div
                data-value="01:40"
                data-text="01:40"
                class="item"
              >
                01:40
              </div>
              <div
                data-value="01:45"
                data-text="01:45"
                class="item"
              >
                01:45
              </div>
              <div
                data-value="01:50"
                data-text="01:50"
                class="item"
              >
                01:50
              </div>
              <div
                data-value="01:55"
                data-text="01:55"
                class="item"
              >
                01:55
              </div>
              <div
                data-value="02:00"
                data-text="02:00"
                class="item"
              >
                02:00
              </div>
              <div
                data-value="02:05"
                data-text="02:05"
                class="item"
              >
                02:05
              </div>
              <div
                data-value="02:10"
                data-text="02:10"
                class="item"
              >
                02:10
              </div>
              <div
                data-value="02:15"
                data-text="02:15"
                class="item"
              >
                02:15
              </div>
              <div
                data-value="02:20"
                data-text="02:20"
                class="item"
              >
                02:20
              </div>
              <div
                data-value="02:25"
                data-text="02:25"
                class="item"
              >
                02:25
              </div>
              <div
                data-value="02:30"
                data-text="02:30"
                class="item"
              >
                02:30
              </div>
              <div
                data-value="02:35"
                data-text="02:35"
                class="item"
              >
                02:35
              </div>
              <div
                data-value="02:40"
                data-text="02:40"
                class="item"
              >
                02:40
              </div>
              <div
                data-value="02:45"
                data-text="02:45"
                class="item"
              >
                02:45
              </div>
              <div
                data-value="02:50"
                data-text="02:50"
                class="item"
              >
                02:50
              </div>
              <div
                data-value="02:55"
                data-text="02:55"
                class="item"
              >
                02:55
              </div>
              <div
                data-value="03:00"
                data-text="03:00"
                class="item"
              >
                03:00
              </div>
              <div
                data-value="03:05"
                data-text="03:05"
                class="item"
              >
                03:05
              </div>
              <div
                data-value="03:10"
                data-text="03:10"
                class="item"
              >
                03:10
              </div>
              <div
                data-value="03:15"
                data-text="03:15"
                class="item"
              >
                03:15
              </div>
              <div
                data-value="03:20"
                data-text="03:20"
                class="item"
              >
                03:20
              </div>
              <div
                data-value="03:25"
                data-text="03:25"
                class="item"
              >
                03:25
              </div>
              <div
                data-value="03:30"
                data-text="03:30"
                class="item"
              >
                03:30
              </div>
              <div
                data-value="03:35"
                data-text="03:35"
                class="item"
              >
                03:35
              </div>
              <div
                data-value="03:40"
                data-text="03:40"
                class="item"
              >
                03:40
              </div>
              <div
                data-value="03:45"
                data-text="03:45"
                class="item"
              >
                03:45
              </div>
              <div
                data-value="03:50"
                data-text="03:50"
                class="item"
              >
                03:50
              </div>
              <div
                data-value="03:55"
                data-text="03:55"
                class="item"
              >
                03:55
              </div>
              <div
                data-value="04:00"
                data-text="04:00"
                class="item"
              >
                04:00
              </div>
              <div
                data-value="04:05"
                data-text="04:05"
                class="item"
              >
                04:05
              </div>
              <div
                data-value="04:10"
                data-text="04:10"
                class="item"
              >
                04:10
              </div>
              <div
                data-value="04:15"
                data-text="04:15"
                class="item"
              >
                04:15
              </div>
              <div
                data-value="04:20"
                data-text="04:20"
                class="item"
              >
                04:20
              </div>
              <div
                data-value="04:25"
                data-text="04:25"
                class="item"
              >
                04:25
              </div>
              <div
                data-value="04:30"
                data-text="04:30"
                class="item"
              >
                04:30
              </div>
              <div
                data-value="04:35"
                data-text="04:35"
                class="item"
              >
                04:35
              </div>
              <div
                data-value="04:40"
                data-text="04:40"
                class="item"
              >
                04:40
              </div>
              <div
                data-value="04:45"
                data-text="04:45"
                class="item"
              >
                04:45
              </div>
              <div
                data-value="04:50"
                data-text="04:50"
                class="item"
              >
                04:50
              </div>
              <div
                data-value="04:55"
                data-text="04:55"
                class="item"
              >
                04:55
              </div>
              <div
                data-value="05:00"
                data-text="05:00"
                class="item"
              >
                05:00
              </div>
              <div
                data-value="05:05"
                data-text="05:05"
                class="item"
              >
                05:05
              </div>
              <div
                data-value="05:10"
                data-text="05:10"
                class="item"
              >
                05:10
              </div>
              <div
                data-value="05:15"
                data-text="05:15"
                class="item"
              >
                05:15
              </div>
              <div
                data-value="05:20"
                data-text="05:20"
                class="item"
              >
                05:20
              </div>
              <div
                data-value="05:25"
                data-text="05:25"
                class="item"
              >
                05:25
              </div>
              <div
                data-value="05:30"
                data-text="05:30"
                class="item"
              >
                05:30
              </div>
              <div
                data-value="05:35"
                data-text="05:35"
                class="item"
              >
                05:35
              </div>
              <div
                data-value="05:40"
                data-text="05:40"
                class="item"
              >
                05:40
              </div>
              <div
                data-value="05:45"
                data-text="05:45"
                class="item"
              >
                05:45
              </div>
              <div
                data-value="05:50"
                data-text="05:50"
                class="item"
              >
                05:50
              </div>
              <div
                data-value="05:55"
                data-text="05:55"
                class="item"
              >
                05:55
              </div>
              <div
                data-value="06:00"
                data-text="06:00"
                class="item"
              >
                06:00
              </div>
              <div
                data-value="06:05"
                data-text="06:05"
                class="item"
              >
                06:05
              </div>
              <div
                data-value="06:10"
                data-text="06:10"
                class="item"
              >
                06:10
              </div>
              <div
                data-value="06:15"
                data-text="06:15"
                class="item"
              >
                06:15
              </div>
              <div
                data-value="06:20"
                data-text="06:20"
                class="item"
              >
                06:20
              </div>
              <div
                data-value="06:25"
                data-text="06:25"
                class="item"
              >
                06:25
              </div>
              <div
                data-value="06:30"
                data-text="06:30"
                class="item"
              >
                06:30
              </div>
              <div
                data-value="06:35"
                data-text="06:35"
                class="item"
              >
                06:35
              </div>
              <div
                data-value="06:40"
                data-text="06:40"
                class="item"
              >
                06:40
              </div>
              <div
                data-value="06:45"
                data-text="06:45"
                class="item"
              >
                06:45
              </div>
              <div
                data-value="06:50"
                data-text="06:50"
                class="item"
              >
                06:50
              </div>
              <div
                data-value="06:55"
                data-text="06:55"
                class="item"
              >
                06:55
              </div>
              <div
                data-value="07:00"
                data-text="07:00"
                class="item"
              >
                07:00
              </div>
              <div
                data-value="07:05"
                data-text="07:05"
                class="item"
              >
                07:05
              </div>
              <div
                data-value="07:10"
                data-text="07:10"
                class="item"
              >
                07:10
              </div>
              <div
                data-value="07:15"
                data-text="07:15"
                class="item"
              >
                07:15
              </div>
              <div
                data-value="07:20"
                data-text="07:20"
                class="item"
              >
                07:20
              </div>
              <div
                data-value="07:25"
                data-text="07:25"
                class="item"
              >
                07:25
              </div>
              <div
                data-value="07:30"
                data-text="07:30"
                class="item"
              >
                07:30
              </div>
              <div
                data-value="07:35"
                data-text="07:35"
                class="item"
              >
                07:35
              </div>
              <div
                data-value="07:40"
                data-text="07:40"
                class="item"
              >
                07:40
              </div>
              <div
                data-value="07:45"
                data-text="07:45"
                class="item"
              >
                07:45
              </div>
              <div
                data-value="07:50"
                data-text="07:50"
                class="item"
              >
                07:50
              </div>
              <div
                data-value="07:55"
                data-text="07:55"
                class="item"
              >
                07:55
              </div>
              <div
                data-value="08:00"
                data-text="08:00"
                class="item"
              >
                08:00
              </div>
              <div
                data-value="08:05"
                data-text="08:05"
                class="item"
              >
                08:05
              </div>
              <div
                data-value="08:10"
                data-text="08:10"
                class="item"
              >
                08:10
              </div>
              <div
                data-value="08:15"
                data-text="08:15"
                class="item"
              >
                08:15
              </div>
              <div
                data-value="08:20"
                data-text="08:20"
                class="item"
              >
                08:20
              </div>
              <div
                data-value="08:25"
                data-text="08:25"
                class="item"
              >
                08:25
              </div>
              <div
                data-value="08:30"
                data-text="08:30"
                class="item"
              >
                08:30
              </div>
              <div
                data-value="08:35"
                data-text="08:35"
                class="item"
              >
                08:35
              </div>
              <div
                data-value="08:40"
                data-text="08:40"
                class="item"
              >
                08:40
              </div>
              <div
                data-value="08:45"
                data-text="08:45"
                class="item"
              >
                08:45
              </div>
              <div
                data-value="08:50"
                data-text="08:50"
                class="item"
              >
                08:50
              </div>
              <div
                data-value="08:55"
                data-text="08:55"
                class="item"
              >
                08:55
              </div>
              <div
                data-value="09:00"
                data-text="09:00"
                class="item"
              >
                09:00
              </div>
              <div
                data-value="09:05"
                data-text="09:05"
                class="item"
              >
                09:05
              </div>
              <div
                data-value="09:10"
                data-text="09:10"
                class="item"
              >
                09:10
              </div>
              <div
                data-value="09:15"
                data-text="09:15"
                class="item"
              >
                09:15
              </div>
              <div
                data-value="09:20"
                data-text="09:20"
                class="item"
              >
                09:20
              </div>
              <div
                data-value="09:25"
                data-text="09:25"
                class="item"
              >
                09:25
              </div>
              <div
                data-value="09:30"
                data-text="09:30"
                class="item"
              >
                09:30
              </div>
              <div
                data-value="09:35"
                data-text="09:35"
                class="item"
              >
                09:35
              </div>
              <div
                data-value="09:40"
                data-text="09:40"
                class="item"
              >
                09:40
              </div>
              <div
                data-value="09:45"
                data-text="09:45"
                class="item"
              >
                09:45
              </div>
              <div
                data-value="09:50"
                data-text="09:50"
                class="item"
              >
                09:50
              </div>
              <div
                data-value="09:55"
                data-text="09:55"
                class="item"
              >
                09:55
              </div>
              <div
                data-value="10:00"
                data-text="10:00"
                class="item"
              >
                10:00
              </div>
              <div
                data-value="10:05"
                data-text="10:05"
                class="item"
              >
                10:05
              </div>
              <div
                data-value="10:10"
                data-text="10:10"
                class="item"
              >
                10:10
              </div>
              <div
                data-value="10:15"
                data-text="10:15"
                class="item"
              >
                10:15
              </div>
              <div
                data-value="10:20"
                data-text="10:20"
                class="item"
              >
                10:20
              </div>
              <div
                data-value="10:25"
                data-text="10:25"
                class="item"
              >
                10:25
              </div>
              <div
                data-value="10:30"
                data-text="10:30"
                class="item"
              >
                10:30
              </div>
              <div
                data-value="10:35"
                data-text="10:35"
                class="item"
              >
                10:35
              </div>
              <div
                data-value="10:40"
                data-text="10:40"
                class="item"
              >
                10:40
              </div>
              <div
                data-value="10:45"
                data-text="10:45"
                class="item"
              >
                10:45
              </div>
              <div
                data-value="10:50"
                data-text="10:50"
                class="item"
              >
                10:50
              </div>
              <div
                data-value="10:55"
                data-text="10:55"
                class="item"
              >
                10:55
              </div>
              <div
                data-value="11:00"
                data-text="11:00"
                class="item"
              >
                11:00
              </div>
              <div
                data-value="11:05"
                data-text="11:05"
                class="item"
              >
                11:05
              </div>
              <div
                data-value="11:10"
                data-text="11:10"
                class="item"
              >
                11:10
              </div>
              <div
                data-value="11:15"
                data-text="11:15"
                class="item"
              >
                11:15
              </div>
              <div
                data-value="11:20"
                data-text="11:20"
                class="item"
              >
                11:20
              </div>
              <div
                data-value="11:25"
                data-text="11:25"
                class="item"
              >
                11:25
              </div>
              <div
                data-value="11:30"
                data-text="11:30"
                class="item"
              >
                11:30
              </div>
              <div
                data-value="11:35"
                data-text="11:35"
                class="item"
              >
                11:35
              </div>
              <div
                data-value="11:40"
                data-text="11:40"
                class="item"
              >
                11:40
              </div>
              <div
                data-value="11:45"
                data-text="11:45"
                class="item"
              >
                11:45
              </div>
              <div
                data-value="11:50"
                data-text="11:50"
                class="item"
              >
                11:50
              </div>
              <div
                data-value="11:55"
                data-text="11:55"
                class="item"
              >
                11:55
              </div>
              <div
                data-value="12:00"
                data-text="12:00"
                class="item"
              >
                12:00
              </div>
              <div
                data-value="12:05"
                data-text="12:05"
                class="item"
              >
                12:05
              </div>
              <div
                data-value="12:10"
                data-text="12:10"
                class="item"
              >
                12:10
              </div>
              <div
                data-value="12:15"
                data-text="12:15"
                class="item"
              >
                12:15
              </div>
              <div
                data-value="12:20"
                data-text="12:20"
                class="item"
              >
                12:20
              </div>
              <div
                data-value="12:25"
                data-text="12:25"
                class="item"
              >
                12:25
              </div>
              <div
                data-value="12:30"
                data-text="12:30"
                class="item"
              >
                12:30
              </div>
              <div
                data-value="12:35"
                data-text="12:35"
                class="item"
              >
                12:35
              </div>
              <div
                data-value="12:40"
                data-text="12:40"
                class="item"
              >
                12:40
              </div>
              <div
                data-value="12:45"
                data-text="12:45"
                class="item"
              >
                12:45
              </div>
              <div
                data-value="12:50"
                data-text="12:50"
                class="item"
              >
                12:50
              </div>
              <div
                data-value="12:55"
                data-text="12:55"
                class="item"
              >
                12:55
              </div>
              <div
                data-value="13:00"
                data-text="13:00"
                class="item"
              >
                13:00
              </div>
              <div
                data-value="13:05"
                data-text="13:05"
                class="item"
              >
                13:05
              </div>
              <div
                data-value="13:10"
                data-text="13:10"
                class="item"
              >
                13:10
              </div>
              <div
                data-value="13:15"
                data-text="13:15"
                class="item"
              >
                13:15
              </div>
              <div
                data-value="13:20"
                data-text="13:20"
                class="item"
              >
                13:20
              </div>
              <div
                data-value="13:25"
                data-text="13:25"
                class="item"
              >
                13:25
              </div>
              <div
                data-value="13:30"
                data-text="13:30"
                class="item"
              >
                13:30
              </div>
              <div
                data-value="13:35"
                data-text="13:35"
                class="item"
              >
                13:35
              </div>
              <div
                data-value="13:40"
                data-text="13:40"
                class="item"
              >
                13:40
              </div>
              <div
                data-value="13:45"
                data-text="13:45"
                class="item"
              >
                13:45
              </div>
              <div
                data-value="13:50"
                data-text="13:50"
                class="item"
              >
                13:50
              </div>
              <div
                data-value="13:55"
                data-text="13:55"
                class="item"
              >
                13:55
              </div>
              <div
                data-value="14:00"
                data-text="14:00"
                class="item"
              >
                14:00
              </div>
              <div
                data-value="14:05"
                data-text="14:05"
                class="item"
              >
                14:05
              </div>
              <div
                data-value="14:10"
                data-text="14:10"
                class="item"
              >
                14:10
              </div>
              <div
                data-value="14:15"
                data-text="14:15"
                class="item"
              >
                14:15
              </div>
              <div
                data-value="14:20"
                data-text="14:20"
                class="item"
              >
                14:20
              </div>
              <div
                data-value="14:25"
                data-text="14:25"
                class="item"
              >
                14:25
              </div>
              <div
                data-value="14:30"
                data-text="14:30"
                class="item"
              >
                14:30
              </div>
              <div
                data-value="14:35"
                data-text="14:35"
                class="item"
              >
                14:35
              </div>
              <div
                data-value="14:40"
                data-text="14:40"
                class="item"
              >
                14:40
              </div>
              <div
                data-value="14:45"
                data-text="14:45"
                class="item"
              >
                14:45
              </div>
              <div
                data-value="14:50"
                data-text="14:50"
                class="item"
              >
                14:50
              </div>
              <div
                data-value="14:55"
                data-text="14:55"
                class="item"
              >
                14:55
              </div>
              <div
                data-value="15:00"
                data-text="15:00"
                class="item"
              >
                15:00
              </div>
              <div
                data-value="15:05"
                data-text="15:05"
                class="item"
              >
                15:05
              </div>
              <div
                data-value="15:10"
                data-text="15:10"
                class="item"
              >
                15:10
              </div>
              <div
                data-value="15:15"
                data-text="15:15"
                class="item"
              >
                15:15
              </div>
              <div
                data-value="15:20"
                data-text="15:20"
                class="item"
              >
                15:20
              </div>
              <div
                data-value="15:25"
                data-text="15:25"
                class="item"
              >
                15:25
              </div>
              <div
                data-value="15:30"
                data-text="15:30"
                class="item"
              >
                15:30
              </div>
              <div
                data-value="15:35"
                data-text="15:35"
                class="item"
              >
                15:35
              </div>
              <div
                data-value="15:40"
                data-text="15:40"
                class="item"
              >
                15:40
              </div>
              <div
                data-value="15:45"
                data-text="15:45"
                class="item"
              >
                15:45
              </div>
              <div
                data-value="15:50"
                data-text="15:50"
                class="item"
              >
                15:50
              </div>
              <div
                data-value="15:55"
                data-text="15:55"
                class="item"
              >
                15:55
              </div>
              <div
                data-value="16:00"
                data-text="16:00"
                class="item"
              >
                16:00
              </div>
              <div
                data-value="16:05"
                data-text="16:05"
                class="item"
              >
                16:05
              </div>
              <div
                data-value="16:10"
                data-text="16:10"
                class="item"
              >
                16:10
              </div>
              <div
                data-value="16:15"
                data-text="16:15"
                class="item"
              >
                16:15
              </div>
              <div
                data-value="16:20"
                data-text="16:20"
                class="item"
              >
                16:20
              </div>
              <div
                data-value="16:25"
                data-text="16:25"
                class="item"
              >
                16:25
              </div>
              <div
                data-value="16:30"
                data-text="16:30"
                class="item"
              >
                16:30
              </div>
              <div
                data-value="16:35"
                data-text="16:35"
                class="item"
              >
                16:35
              </div>
              <div
                data-value="16:40"
                data-text="16:40"
                class="item"
              >
                16:40
              </div>
              <div
                data-value="16:45"
                data-text="16:45"
                class="item"
              >
                16:45
              </div>
              <div
                data-value="16:50"
                data-text="16:50"
                class="item"
              >
                16:50
              </div>
              <div
                data-value="16:55"
                data-text="16:55"
                class="item"
              >
                16:55
              </div>
              <div
                data-value="17:00"
                data-text="17:00"
                class="item"
              >
                17:00
              </div>
              <div
                data-value="17:05"
                data-text="17:05"
                class="item"
              >
                17:05
              </div>
              <div
                data-value="17:10"
                data-text="17:10"
                class="item"
              >
                17:10
              </div>
              <div
                data-value="17:15"
                data-text="17:15"
                class="item"
              >
                17:15
              </div>
              <div
                data-value="17:20"
                data-text="17:20"
                class="item"
              >
                17:20
              </div>
              <div
                data-value="17:25"
                data-text="17:25"
                class="item"
              >
                17:25
              </div>
              <div
                data-value="17:30"
                data-text="17:30"
                class="item"
              >
                17:30
              </div>
              <div
                data-value="17:35"
                data-text="17:35"
                class="item"
              >
                17:35
              </div>
              <div
                data-value="17:40"
                data-text="17:40"
                class="item"
              >
                17:40
              </div>
              <div
                data-value="17:45"
                data-text="17:45"
                class="item"
              >
                17:45
              </div>
              <div
                data-value="17:50"
                data-text="17:50"
                class="item"
              >
                17:50
              </div>
              <div
                data-value="17:55"
                data-text="17:55"
                class="item"
              >
                17:55
              </div>
              <div
                data-value="18:00"
                data-text="18:00"
                class="item"
              >
                18:00
              </div>
              <div
                data-value="18:05"
                data-text="18:05"
                class="item"
              >
                18:05
              </div>
              <div
                data-value="18:10"
                data-text="18:10"
                class="item"
              >
                18:10
              </div>
              <div
                data-value="18:15"
                data-text="18:15"
                class="item"
              >
                18:15
              </div>
              <div
                data-value="18:20"
                data-text="18:20"
                class="item"
              >
                18:20
              </div>
              <div
                data-value="18:25"
                data-text="18:25"
                class="item"
              >
                18:25
              </div>
              <div
                data-value="18:30"
                data-text="18:30"
                class="item"
              >
                18:30
              </div>
              <div
                data-value="18:35"
                data-text="18:35"
                class="item"
              >
                18:35
              </div>
              <div
                data-value="18:40"
                data-text="18:40"
                class="item"
              >
                18:40
              </div>
              <div
                data-value="18:45"
                data-text="18:45"
                class="item"
              >
                18:45
              </div>
              <div
                data-value="18:50"
                data-text="18:50"
                class="item"
              >
                18:50
              </div>
              <div
                data-value="18:55"
                data-text="18:55"
                class="item"
              >
                18:55
              </div>
              <div
                data-value="19:00"
                data-text="19:00"
                class="item"
              >
                19:00
              </div>
              <div
                data-value="19:05"
                data-text="19:05"
                class="item"
              >
                19:05
              </div>
              <div
                data-value="19:10"
                data-text="19:10"
                class="item"
              >
                19:10
              </div>
              <div
                data-value="19:15"
                data-text="19:15"
                class="item"
              >
                19:15
              </div>
              <div
                data-value="19:20"
                data-text="19:20"
                class="item"
              >
                19:20
              </div>
              <div
                data-value="19:25"
                data-text="19:25"
                class="item"
              >
                19:25
              </div>
              <div
                data-value="19:30"
                data-text="19:30"
                class="item"
              >
                19:30
              </div>
              <div
                data-value="19:35"
                data-text="19:35"
                class="item"
              >
                19:35
              </div>
              <div
                data-value="19:40"
                data-text="19:40"
                class="item"
              >
                19:40
              </div>
              <div
                data-value="19:45"
                data-text="19:45"
                class="item"
              >
                19:45
              </div>
              <div
                data-value="19:50"
                data-text="19:50"
                class="item"
              >
                19:50
              </div>
              <div
                data-value="19:55"
                data-text="19:55"
                class="item"
              >
                19:55
              </div>
              <div
                data-value="20:00"
                data-text="20:00"
                class="item"
              >
                20:00
              </div>
              <div
                data-value="20:05"
                data-text="20:05"
                class="item"
              >
                20:05
              </div>
              <div
                data-value="20:10"
                data-text="20:10"
                class="item"
              >
                20:10
              </div>
              <div
                data-value="20:15"
                data-text="20:15"
                class="item"
              >
                20:15
              </div>
              <div
                data-value="20:20"
                data-text="20:20"
                class="item"
              >
                20:20
              </div>
              <div
                data-value="20:25"
                data-text="20:25"
                class="item"
              >
                20:25
              </div>
              <div
                data-value="20:30"
                data-text="20:30"
                class="item"
              >
                20:30
              </div>
              <div
                data-value="20:35"
                data-text="20:35"
                class="item"
              >
                20:35
              </div>
              <div
                data-value="20:40"
                data-text="20:40"
                class="item"
              >
                20:40
              </div>
              <div
                data-value="20:45"
                data-text="20:45"
                class="item"
              >
                20:45
              </div>
              <div
                data-value="20:50"
                data-text="20:50"
                class="item"
              >
                20:50
              </div>
              <div
                data-value="20:55"
                data-text="20:55"
                class="item"
              >
                20:55
              </div>
              <div
                data-value="21:00"
                data-text="21:00"
                class="item"
              >
                21:00
              </div>
              <div
                data-value="21:05"
                data-text="21:05"
                class="item"
              >
                21:05
              </div>
              <div
                data-value="21:10"
                data-text="21:10"
                class="item"
              >
                21:10
              </div>
              <div
                data-value="21:15"
                data-text="21:15"
                class="item"
              >
                21:15
              </div>
              <div
                data-value="21:20"
                data-text="21:20"
                class="item"
              >
                21:20
              </div>
              <div
                data-value="21:25"
                data-text="21:25"
                class="item"
              >
                21:25
              </div>
              <div
                data-value="21:30"
                data-text="21:30"
                class="item"
              >
                21:30
              </div>
              <div
                data-value="21:35"
                data-text="21:35"
                class="item"
              >
                21:35
              </div>
              <div
                data-value="21:40"
                data-text="21:40"
                class="item"
              >
                21:40
              </div>
              <div
                data-value="21:45"
                data-text="21:45"
                class="item"
              >
                21:45
              </div>
              <div
                data-value="21:50"
                data-text="21:50"
                class="item"
              >
                21:50
              </div>
              <div
                data-value="21:55"
                data-text="21:55"
                class="item"
              >
                21:55
              </div>
              <div
                data-value="22:00"
                data-text="22:00"
                class="item"
              >
                22:00
              </div>
              <div
                data-value="22:05"
                data-text="22:05"
                class="item"
              >
                22:05
              </div>
              <div
                data-value="22:10"
                data-text="22:10"
                class="item"
              >
                22:10
              </div>
              <div
                data-value="22:15"
                data-text="22:15"
                class="item"
              >
                22:15
              </div>
              <div
                data-value="22:20"
                data-text="22:20"
                class="item"
              >
                22:20
              </div>
              <div
                data-value="22:25"
                data-text="22:25"
                class="item"
              >
                22:25
              </div>
              <div
                data-value="22:30"
                data-text="22:30"
                class="item"
              >
                22:30
              </div>
              <div
                data-value="22:35"
                data-text="22:35"
                class="item"
              >
                22:35
              </div>
              <div
                data-value="22:40"
                data-text="22:40"
                class="item"
              >
                22:40
              </div>
              <div
                data-value="22:45"
                data-text="22:45"
                class="item"
              >
                22:45
              </div>
              <div
                data-value="22:50"
                data-text="22:50"
                class="item"
              >
                22:50
              </div>
              <div
                data-value="22:55"
                data-text="22:55"
                class="item"
              >
                22:55
              </div>
              <div
                data-value="23:00"
                data-text="23:00"
                class="item"
              >
                23:00
              </div>
              <div
                data-value="23:05"
                data-text="23:05"
                class="item"
              >
                23:05
              </div>
              <div
                data-value="23:10"
                data-text="23:10"
                class="item"
              >
                23:10
              </div>
              <div
                data-value="23:15"
                data-text="23:15"
                class="item"
              >
                23:15
              </div>
              <div
                data-value="23:20"
                data-text="23:20"
                class="item"
              >
                23:20
              </div>
              <div
                data-value="23:25"
                data-text="23:25"
                class="item"
              >
                23:25
              </div>
              <div
                data-value="23:30"
                data-text="23:30"
                class="item"
              >
                23:30
              </div>
              <div
                data-value="23:35"
                data-text="23:35"
                class="item"
              >
                23:35
              </div>
              <div
                data-value="23:40"
                data-text="23:40"
                class="item"
              >
                23:40
              </div>
              <div
                data-value="23:45"
                data-text="23:45"
                class="item"
              >
                23:45
              </div>
              <div
                data-value="23:50"
                data-text="23:50"
                class="item"
              >
                23:50
              </div>
              <div
                data-value="23:55"
                data-text="23:55"
                class="item"
              >
                23:55
              </div>
              <div
                data-value="23:59"
                data-text="23:59"
                class="item"
              >
                23:59
              </div>
            </div>
          </div>
          <div
            class="ui light"
            style="margin-top: 5px;"
          >
            (Timezone: 
            <strong>
              Etc/UTC
            </strong>
            )
          </div>
        </div>
        <div
          class="field"
        >
          <label>
            Maximum number of times to run
          </label>
          <input
            type="number"
          />
        </div>
        <div
          class="ui divider"
        />
        <div
          class="field"
        >
          <button
            class="ui blue fluid button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Scheduler Editor empty schedule should match the snapshot 2`] = `
Object {
  "frequency": Object {
    "at": "00:00",
    "days": Object {
      "friday": false,
      "monday": false,
      "saturday": false,
      "sunday": false,
      "thursday": false,
      "tuesday": false,
      "wednesday": false,
    },
    "months": Object {
      "april": false,
      "august": false,
      "december": false,
      "february": false,
      "january": false,
      "july": false,
      "june": false,
      "march": false,
      "may": false,
      "november": false,
      "october": false,
      "september": false,
    },
    "recur": "daily",
    "timezone": "Etc/UTC",
  },
  "limit": Object {
    "endsAt": null,
    "maxExecutions": null,
    "startsAt": "2018-03-10 00:00:00",
  },
}
`;
